crates/vox-codegen/tests/snapshots/main_boot_snapshot__main_boot_no_scheduled_no_endpoints.snap
---
source: crates/vox-codegen/tests/main_boot_snapshot.rs
expression: main_rs
---
// Generated by Vox Compiler — durable-binary main() boot routine.
// See docs/superpowers/plans/2026-05-23-durable-functions-completion.md (Task 5.1)
// and docs/src/adr/041-durable-functions-completion-2026.md §6(b).
//
// The contract here is:
//   DB init  →  HIR register  →  scheduler register+start  →  ctrl-C  →  graceful shutdown.
// HTTP serving still lives in the per-route emit (http.rs); factoring that
// into a reusable vox-http-runtime crate is DEFERRED under §6(c) — see
// docs/src/architecture/http-runtime-extraction-2026.md for constraints.

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    // 1. Initialize the durable database.
    //    Uses `DbConfig::resolve_canonical()` so the binary picks up
    //    `VOX_DB_URL`/`VOX_DB_PATH` env vars (matches `emit_db_setup`).
    let db = std::sync::Arc::new(::vox_db::VoxDb::connect(
        ::vox_db::DbConfig::resolve_canonical()
            .expect("vox durable boot: resolve VoxDb config (VOX_DB_URL+TOKEN, or VOX_DB_PATH)"),
    ).await?);

    // 2. Register the process-global HirModule for workflow body lookup.
    //    The HirModule is serialized to JSON at codegen time and embedded
    //    as a `const &str` (see `load_hir_module_from_embedded` below).
    ::vox_workflow_runtime::workflow::set_current_hir_module(
        load_hir_module_from_embedded()
    );

    // 3. No `@scheduled` functions in this module — scheduler not started.

    // 4. No `@query` / `@mutation` / `@server` endpoints — HTTP server not booted.

    // 5. Wait for shutdown signal, then gracefully stop background tasks.
    tokio::signal::ctrl_c().await?;
    Ok(())
}

/// Decode the codegen-time-embedded HirModule JSON back into a runtime
/// `HirModule`. Called once from `main()` to register the process-global
/// module for `current_hir_module()` lookups (ADR-041 §6(b)).
fn load_hir_module_from_embedded() -> ::vox_compiler::hir::HirModule {
    const EMBEDDED_HIR: &str = r#"{"imports":[],"rust_imports":[],"functions":[{"id":0,"name":"plain","generics":[],"params":[],"return_type":{"Named":"int"},"body":[{"Return":{"value":{"IntLit":[1,{"start":36,"end":37}]},"span":{"start":29,"end":39}}}],"is_async":false,"is_pub":false,"is_mobile_native":false,"is_pure":false,"is_reactive":false,"is_versioned":false,"capabilities":[],"is_remote":false,"is_llm":false,"is_deprecated":false,"is_traced":false,"postconditions":[],"span":{"start":9,"end":40},"training_step":false,"placement_override":null}],"types":[],"tests":[],"examples":[],"foralls":[],"endpoint_fns":[],"tables":[],"indexes":[],"collections":[],"vector_indexes":[],"search_indexes":[],"mcp_tools":[],"mcp_resources":[],"agents":[],"environments":[],"components":[],"client_routes":[],"url_decls":[],"state_machines":[],"fragments":[],"reactive_modules":[],"forms":[],"back_button":null,"deep_link":null,"push":null,"token_decls":[],"route_ids":[],"inferred_types":{},"consts":[],"configs":[],"themes":[],"messages":[],"skills":[],"agent_defs":[],"legacy_ast_nodes":[],"lower_warnings":[]}"#;
    ::serde_json::from_str(EMBEDDED_HIR)
        .expect("embedded HirModule deserializes (codegen wrote it; should round-trip)")
}
