crates/vox-codegen/tests/snapshots/main_boot_snapshot__main_boot_scheduled_actor_server.snap
---
source: crates/vox-codegen/tests/main_boot_snapshot.rs
expression: main_rs
---
// Generated by Vox Compiler — durable-binary main() boot routine.
// See docs/superpowers/plans/2026-05-23-durable-functions-completion.md (Task 5.1)
// and docs/src/adr/041-durable-functions-completion-2026.md §6(b).
//
// The contract here is:
//   DB init  →  HIR register  →  scheduler register+start  →  ctrl-C  →  graceful shutdown.
// HTTP serving still lives in the per-route emit (http.rs); factoring that
// into a reusable vox-http-runtime crate is DEFERRED under §6(c) — see
// docs/src/architecture/http-runtime-extraction-2026.md for constraints.

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    // 1. Initialize the durable database.
    //    Uses `DbConfig::resolve_canonical()` so the binary picks up
    //    `VOX_DB_URL`/`VOX_DB_PATH` env vars (matches `emit_db_setup`).
    let db = std::sync::Arc::new(::vox_db::VoxDb::connect(
        ::vox_db::DbConfig::resolve_canonical()
            .expect("vox durable boot: resolve VoxDb config (VOX_DB_URL+TOKEN, or VOX_DB_PATH)"),
    ).await?);

    // 2. Register the process-global HirModule for workflow body lookup.
    //    The HirModule is serialized to JSON at codegen time and embedded
    //    as a `const &str` (see `load_hir_module_from_embedded` below).
    ::vox_workflow_runtime::workflow::set_current_hir_module(
        load_hir_module_from_embedded()
    );

    // 3. Register every `@scheduled` function and start the runner.
    ::vox_workflow_runtime::scheduled::register(
        "tick",
        ::vox_workflow_runtime::parse_duration_str("1m")
            .unwrap_or_else(|e| panic!("@scheduled("1m") on fn `tick`: {e}")),
        std::sync::Arc::new(|| Box::pin(async {
            let _ = tick().await;
            Ok(())
        })),
        db.clone(),
    ).await?;
    let scheduled_handle = ::vox_workflow_runtime::scheduled::start(db.clone()).await?;

    // 4. HTTP server boot.
    // DEFERRED (ADR-041 §6(c), 2026-05-23):
    // The workspace does not ship a `vox-http-runtime::serve(db, hir) -> Handle`
    // because per-route handlers are code-generated by name (not registered at
    // runtime) — see docs/src/architecture/http-runtime-extraction-2026.md for
    // the full constraints + two-phase extraction plan. Production codegen uses
    // `emit_main` (http.rs) which serves HTTP inline; this `emit_main_boot` path
    // is durable-only today.

    // 5. Wait for shutdown signal, then gracefully stop background tasks.
    tokio::signal::ctrl_c().await?;
    scheduled_handle.shutdown().await;
    Ok(())
}

/// Decode the codegen-time-embedded HirModule JSON back into a runtime
/// `HirModule`. Called once from `main()` to register the process-global
/// module for `current_hir_module()` lookups (ADR-041 §6(b)).
fn load_hir_module_from_embedded() -> ::vox_compiler::hir::HirModule {
    const EMBEDDED_HIR: &str = r#"{"imports":[],"rust_imports":[],"functions":[{"id":0,"name":"tick","generics":[],"params":[],"return_type":{"Named":"int"},"body":[{"Return":{"value":{"IntLit":[1,{"start":60,"end":61}]},"span":{"start":53,"end":63}}}],"is_async":false,"is_pub":false,"is_mobile_native":false,"is_pure":false,"is_reactive":false,"is_versioned":false,"capabilities":[],"is_remote":false,"is_llm":false,"is_deprecated":false,"is_traced":false,"schedule_interval":"1m","postconditions":[],"span":{"start":34,"end":64},"training_step":false,"placement_override":null},{"id":1,"name":"Counter","generics":[],"params":[],"return_type":null,"body":[],"is_async":false,"is_pub":false,"is_mobile_native":false,"is_pure":false,"is_reactive":false,"is_versioned":false,"capabilities":[],"is_remote":false,"is_llm":false,"is_deprecated":false,"is_traced":false,"durability":"actor","postconditions":[],"span":{"start":73,"end":140},"training_step":false,"placement_override":null},{"id":2,"name":"Counter::inc","generics":[],"params":[],"return_type":{"Named":"int"},"body":[{"Return":{"value":{"IntLit":[1,{"start":126,"end":127}]},"span":{"start":119,"end":129}}}],"is_async":false,"is_pub":false,"is_mobile_native":false,"is_pure":false,"is_reactive":false,"is_versioned":false,"capabilities":[],"is_remote":false,"is_llm":false,"is_deprecated":false,"is_traced":false,"durability":"actor","postconditions":[],"span":{"start":101,"end":130},"training_step":false,"placement_override":null}],"types":[],"tests":[],"examples":[],"foralls":[],"endpoint_fns":[{"kind":"Server","id":3,"name":"hello","params":[],"return_type":{"Named":"str"},"body":[{"Return":{"value":{"StringLit":["hi",{"start":180,"end":184}]},"span":{"start":173,"end":186}}}],"route_path":"/api/hello","is_pure":false,"webhook":null,"cors":null,"rate_limit":null,"pii":null,"layer":null,"auth":null,"span":{"start":156,"end":187}}],"tables":[],"indexes":[],"collections":[],"vector_indexes":[],"search_indexes":[],"mcp_tools":[],"mcp_resources":[],"agents":[],"environments":[],"components":[],"client_routes":[],"url_decls":[],"state_machines":[],"fragments":[],"reactive_modules":[],"forms":[],"back_button":null,"deep_link":null,"push":null,"token_decls":[],"route_ids":[],"inferred_types":{},"consts":[],"configs":[],"themes":[],"messages":[],"skills":[],"agent_defs":[],"legacy_ast_nodes":[],"lower_warnings":[]}"#;
    ::serde_json::from_str(EMBEDDED_HIR)
        .expect("embedded HirModule deserializes (codegen wrote it; should round-trip)")
}
